# Securechain-DefectDojo

./: .gitignore  README.md
securechain-defectdojo-integration/: Dockerfile  README.md  docker-compose.dev.yml  main.py  pyproject.toml
securechain-defectdojo-integration/app/: database.py  dependencies.py  main.py
securechain-defectdojo-integration/app/api/routers/: generic_findings.py
securechain-defectdojo-integration/app/apis/: defectdojo_client.py  vexgen_client.py
securechain-defectdojo-integration/app/controllers/: generic_findings_controller.py
securechain-defectdojo-integration/app/domain/generic_findings/: artifact_provider.py  document_factory.py  dojo_payload_validator.py  modelspyoption  repository.py  sbom_finder.py
securechain-defectdojo-integration/app/exceptions/: defectdojo_exceptions.py
securechain-defectdojo-integration/app/generic_findings/: __init__.py  cli.py  engine.py
securechain-defectdojo-integration/app/schemas/generic_findings/: generic_findings_schemas.py
securechain-defectdojo-integration/app/services/: generic_findings_service.py
securechain-defectdojo-integration/tests/: test_api_defectdojo_import.py  test_api_generic_findings.py  test_api_generic_findings2.py  test_defectdojo_import_service.py  test_engine_smoke.py  test_generate_from_repository_service.py  test_repository_generic_findings.py  test_service_generic_findings.py
securechain-defectdojo-integration/tests/fixtures/: sbom_minimal.json  tix_base.json  vex_mitigated.json  vex_not_mitigated.json
securechain-frontend/constants/: apiEndpoints.ts
(+14 files in other folders)
