[project]
name = "securechain-defectdojo-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "requests>=2.33.1",
]

[project.optional-dependencies]
dev = [
  "ruff==0.14.6",
  "pre-commit>=3.0",
]
test = [
  "pytest==9.0.1",
  "pytest-cov==7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
